@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,7 @@
  * @modules java.base/sun.util.locale.provider
  *          jdk.localedata
  * @compile -XDignore.symbol.file CldrFormatNamesTest.java
- * @run main/othervm -Djava.locale.providers=CLDR CldrFormatNamesTest
+ * @run main CldrFormatNamesTest
  */
 
 import java.util.*;
